fix(map intro): fix modal overflow (not in exploration map)

--- a/frontend/src/components/common/modal/modalComponent.module.scss
+++ b/frontend/src/components/common/modal/modalComponent.module.scss
@@ -30,6 +30,18 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     width: 50vw;
     max-height: 90vh;
+    text-align: center;
+    position: relative;
+  }
+
+  &ContentWithOverflow {
+    overflow-y: auto;
+    background: #fff;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    width: 50vw;
+    max-height: 90vh;
     overflow-y: auto;
     text-align: center;
     position: relative;
@@ -45,6 +57,8 @@
     cursor: pointer;
     color: #333;
   }
+
+
 
   &CustomContentContainer {
     @include m.flexbox(flex, column, nowrap, flex-start, center);
@@ -181,6 +195,10 @@
 @media (max-width: 480px) {
   .modal {
     &Content {
+      width: 90vw;
+    }
+
+    &ContentWithOverflow {
       width: 90vw;
     }
 
